# eegModel

./: .gitignore  .gitmodules  .skyignore  AGENTS.md  BEST_PRACTICES.md  README.md  pyproject.toml
.cursor/rules/: 00-overview.mdc  10-experiments.mdc  20-training.mdc  30-notion.mdc
eval_runs/r3_2026-05-05/: r3_result.json
experiments/01_sanity_baselines/: README.md
experiments/02_frontend_ablation/: README.md
experiments/03_backbone_ablation/: README.md
experiments/04_ssl_framework_ablation/: README.md
experiments/05_multirate_strategy/: README.md
experiments/06_reconstruction_loss/: README.md
experiments/07_phase_handling/: README.md
experiments/08_denoising_target/: README.md
experiments/09_multicondition_input/: README.md
experiments/10_masking_strategy/: README.md
experiments/11_bottleneck_continuous_vs_fsq/: README.md
experiments/12_quick_wins_consolidation/: README.md
experiments/13_adversarial_dataset_probe/: README.md
experiments/14_context_length_scaling/: README.md
experiments/15_loss_weight_curriculum/: README.md
experiments/16_nsp_auxiliary_head/: README.md
experiments/17_generative_paradigm/: README.md
experiments/18_reconstruction_target/: README.md
experiments/19_decoder_design/: README.md
experiments/20_position_embedding/: README.md
experiments/21_lejepa_eeg/: README.md
experiments/exp01_eeg_to_text/: README.md  diagnostic_report.md  next_experiments.md  progress.md  pyproject.toml  results.md  results_track_a_v2.md  results_track_b_ctc.md
experiments/exp01_eeg_to_text/report/: main.typ
experiments/exp01_eeg_to_text/src/exp01/: __init__.py  bridges.py  chars.py  cli.py  config.py  data.py  decoder.py  encoders.py  eval.py  model.py  preprocessing.py  storage.py  train.py
experiments/exp02_eeg_ctc/: README.md  design.md  findings.md  progress.md  pyproject.toml  results.md  wave2_plan.md
experiments/exp02_eeg_ctc/src/exp02/: __init__.py  chars.py  cli.py  config.py  decode.py  eval.py  head.py  kenlm_build.py  lm_bridge_head.py  model.py  storage.py  text_augment.py  tokenizer_build.py  train.py
experiments/exp03_eeg_pretraining/: README.md  methodology.md  mini_experiments.md  mini_experiments_explainer.typ  progress.md  pyproject.toml
experiments/exp03_eeg_pretraining/mini_experiments/01_sanity_baselines/: README.md  results.md
experiments/exp03_eeg_pretraining/mini_experiments/02_frontend_ablation/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/03_backbone_ablation/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/04_ssl_framework_ablation/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/05_multirate_strategy/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/06_reconstruction_loss/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/07_phase_handling/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/08_denoising_target/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/09_multicondition_input/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/10_masking_strategy/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/11_bottleneck_continuous_vs_fsq/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/12_quick_wins_consolidation/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/13_adversarial_dataset_probe/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/14_context_length_scaling/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/15_loss_weight_curriculum/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/16_nsp_auxiliary_head/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/17_generative_paradigm/: README.md  results.md
experiments/exp03_eeg_pretraining/mini_experiments/18_reconstruction_target/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/19_decoder_design/: README.md
experiments/exp03_eeg_pretraining/mini_experiments/20_position_embedding/: README.md
experiments/exp03_eeg_pretraining/scripts/: full_hbn_pipeline.sh  launch_exp17.sh  launch_exp17_lambda.sh  track_a_run_on_gpu_box.sh
experiments/exp03_eeg_pretraining/src/exp03/: __init__.py  cli.py  data.py  diffusion.py  eval.py  hbn.py  losses.py  model.py  paradigms.py  preprocess.py  sanity.py  storage.py  train.py  tuh.py
infrastructure/aws-mumbai/: .env.example  README.md  bootstrap.sh  eeg.sky.yaml  launch-instance.sh  monitor.sh  prewarm-data.sh  purchase-capacity-block.sh  teardown.sh
scripts/: eval_bootstrap_lambda.sh  full_hbn_pipeline.sh  launch_exp17.sh  launch_exp17_lambda.sh  summarize_exp17.py  track_a_run_on_gpu_box.sh
src/eegfm/: __init__.py  cli.py  data.py  eval.py  losses.py  model.py  paradigms.py  preprocess.py  sanity.py  storage.py  train.py  tuh.py
src/eegfm_eval/: __init__.py  _common.py  adapter.py  cli.py  runner.py  strategies.py
src/eegfm_eval/profiles/: data_scale.yaml  leaderboard.yaml  paper_grade.yaml  sanity_floor.yaml
src/eegfm_eval/tasks/: __init__.py  hbn_ccd_rt.py  hbn_externalizing.py  physionet_mi.py  smoke.py  tuab.py  tuev.py
src/eegfm_eval/tests/: test_reproduce_labram.py  test_smoke.py
