[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exp03-eeg-pretraining"
version = "0.1.0"
description = "Exp03 — self-supervised EEG pretraining (iid-channel single-channel recipe). Pretrains on HBN-EEG (Healthy Brain Network, 3000+ pediatric/young-adult subjects, 128-ch HydroCel @ 500 Hz native, openly distributed on AWS public storage). Frozen-probing eval primarily on HBN ADHD-binary AUROC + HBN 6-task classification BAC/WF1, with TUAB+TUEV as a literature-comparability secondary when TUH NEDC access lands. Self-contained: deliberately does not import from packages/eeg_common — that package is shaped around fine-tuning frozen pretrained encoders, whereas exp03 trains from scratch with a different preprocessing philosophy (minimum offline, maximum in-model)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Pavan Kalyan Tankala" }]

dependencies = [
  # Core scientific stack
  "numpy>=1.26,<3",
  "scipy>=1.13",          # F0-prep filter chain only (notch + bandpass + resample); minimal pipeline is pure numpy
  "pyarrow>=16",          # parquet shard write/read
  "pandas>=2.2",          # metadata, eval splits, participants.tsv parsing

  # EEG file IO
  "mne>=1.7",             # read EEGLAB .set/.fdt + BIDS metadata; no GUI deps pulled in

  # Object storage
  "boto3>=1.34",          # programmatic S3 (HBN public bucket + our warehouse)

  # CLI + UX
  "typer>=0.12",
  "tqdm>=4.66",
  "rich>=13.7",           # console tables for the data audit
]

[project.optional-dependencies]
# GPU-only ML stack. Installed on the GPU box (and any reproducer machine)
# via:  uv pip install -e "experiments/exp03_eeg_pretraining[gpu]"
#
# Reproducibility note: PyPI versions are pinned to compatible-release ranges
# here; the exact resolved versions across all transitive deps are captured
# in the committed `uv.lock` (run `uv lock` after any change to this group).
# If we ever need a third-party patch, we fork the upstream repo to our own
# org and switch the install URL to `git+https://github.com/<us>/<repo>@<sha>`
# — never installing from a mutable upstream branch.
gpu = [
  "torch>=2.8,<3",
  "torchaudio>=2.8,<3",         # MR-STFT loss spectrograms (Check A)
  "transformers>=4.51,<6",      # ships Mamba2Model + Trainer; v5 is the latest stable family
  "accelerate>=1.0,<2",         # mixed precision + multi-GPU runtime; lighter than full Trainer
  "einops>=0.8,<1",             # tensor reshape readability for masking + bidirectional Mamba
  "scikit-learn>=1.5,<2",       # linear probe + k-NN for Check D
  "wandb>=0.18,<1",             # logging from step 1 (per Karpathy: monitor or you'll regret)

  # Mamba-2 official kernel + its prerequisite depthwise-conv kernel.
  # Both are CUDA-built; installing them needs `--no-build-isolation` so
  # they link against the same torch as the venv. We do that as a separate
  # `uv pip install --no-build-isolation` step in the bootstrap, not from
  # this extras list, because uv's normal resolver would otherwise try to
  # build them in an isolated env and fail.
  # "mamba-ssm>=2.2,<3",
  # "causal-conv1d>=1.4,<2",
]

[project.scripts]
exp03 = "exp03.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
